[package]
name = "conductor_backend_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
bcrypt = "0.15"

tokio = { version = "1", features = ["full"]}

serde = { version = "1", features = ["derive"]}

dotenvy = "0.15"
config = "0.15"

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

tower-http = { version = "0.5", features = ["trace"] }

